--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -337,6 +337,15 @@ config RISCV_SBI_V01
 	help
 	  This config allows kernel to use SBI v0.1 APIs. This will be
 	  deprecated in future once legacy M-mode software are no longer in use.
+
+config RISCV_TIMEBASE_DIV
+	int "RISC-V timebase divisor"
+	default 1
+	help
+	  Force the kernel to assume that the mtime RTC frequency is an
+	  integer factor slower than reported by the platform.
+	  This makes simulated systems more responsive to user interaction.
+
 endmenu
 
 menu "Boot options"
